// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PeoplePolkadot Multisig > failure tests > approval with sender in signatories fails > events when approval with sender in signatories fails 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x06000000",
          "index": 41,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 1000000)",
          "refTime": "(rounded 2000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`PeoplePolkadot Multisig > failure tests > approval with signatories out of order fails > events when approval with signatories out of order fails 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x05000000",
          "index": 41,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 1000000)",
          "refTime": "(rounded 2000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`PeoplePolkadot Multisig > failure tests > cancellation with sender in signatories fails > events for cancellation with sender in signatories fails 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x06000000",
          "index": "(rounded 40)",
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 20000)",
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`PeoplePolkadot Multisig > failure tests > cancelling a non-existent multisig operation fails > events when cancelling multisig with bogus call hash fails 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x07000000",
          "index": "(rounded 40)",
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 20000)",
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`PeoplePolkadot Multisig > failure tests > cancelling a non-existent multisig operation fails > events when cancelling multisig with wrong signatories fails 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x07000000",
          "index": "(rounded 40)",
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 20000)",
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`PeoplePolkadot Multisig > failure tests > creating a multisig with threshold < 2 fails > events when creating multisig with threshold < 2 fails 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x00000000",
          "index": 41,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 1000000)",
          "refTime": "(rounded 3000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`PeoplePolkadot Multisig > failure tests > execution with sender in signatories fails > events when creation with sender in signatories fails 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x06000000",
          "index": 41,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 1000000)",
          "refTime": "(rounded 3000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`PeoplePolkadot Multisig > failure tests > multisig cancellation with remaining signatories out of order fails > events when Alice creates multisig for cancel ordering test 1`] = `
[
  {
    "data": {
      "approving": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
      "callHash": "(hash)",
      "multisig": "12fqSn9qVLJL4NY7Uua7bexEAVr9oCpD3e5xmdpNjtQszzBt",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`PeoplePolkadot Multisig > failure tests > multisig cancellation with remaining signatories out of order fails > events when multisig cancellation with signatories out of order fails 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x05000000",
          "index": "(rounded 40)",
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 20000)",
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`PeoplePolkadot Multisig > failure tests > multisig cancellation with threshold < 2 fails > events when multisig cancellation with threshold < 2 fails 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x00000000",
          "index": "(rounded 40)",
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 20000)",
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`PeoplePolkadot Multisig > failure tests > multisig creation with too many signatories fails > events when creating multisig with too many signatories fails 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x04000000",
          "index": 41,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 1000000)",
          "refTime": "(rounded 3000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`PeoplePolkadot Multisig > failure tests > multisig execution with remaining signatories out of order fails > events when Alice creates multisig for ordering test 1`] = `
[
  {
    "data": {
      "approving": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
      "callHash": "(hash)",
      "multisig": "12fqSn9qVLJL4NY7Uua7bexEAVr9oCpD3e5xmdpNjtQszzBt",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`PeoplePolkadot Multisig > failure tests > multisig execution with remaining signatories out of order fails > events when multisig approval with signatories out of order fails 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x05000000",
          "index": 41,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 1000000)",
          "refTime": "(rounded 3000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`PeoplePolkadot Multisig > failure tests > non-depositor tries to cancel multisig fails > events when non-depositor tries to cancel multisig fails 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x08000000",
          "index": "(rounded 40)",
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 20000)",
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`PeoplePolkadot Multisig > failure tests > repeated approval with \`approveAsMulti\` fails > events when repeated approval with approveAsMulti fails 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x01000000",
          "index": 41,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 1000000)",
          "refTime": "(rounded 2000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`PeoplePolkadot Multisig > success tests > basic 2-of-3 multisig creation and execution > events when Alice approves multisig call 1`] = `
[
  {
    "data": {
      "approving": "14E5nqKAp3oAJcmzgZhUD2RcptBeUBScxKHgJKU4HPNcKVf3",
      "callHash": "(hash)",
      "multisig": "12fqSn9qVLJL4NY7Uua7bexEAVr9oCpD3e5xmdpNjtQszzBt",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`PeoplePolkadot Multisig > success tests > basic 2-of-3 multisig creation and execution > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
      "callHash": "(hash)",
      "multisig": "12fqSn9qVLJL4NY7Uua7bexEAVr9oCpD3e5xmdpNjtQszzBt",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`PeoplePolkadot Multisig > success tests > beginning multisig approval with \`approveAsMulti\` works > events when Alice starts multisig with \`approveAsMulti\` 1`] = `
[
  {
    "data": {
      "approving": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
      "callHash": "(hash)",
      "multisig": "12fqSn9qVLJL4NY7Uua7bexEAVr9oCpD3e5xmdpNjtQszzBt",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`PeoplePolkadot Multisig > success tests > beginning multisig approval with \`approveAsMulti\` works > events when Bob executes with \`asMulti\` 1`] = `
[
  {
    "data": {
      "approving": "14E5nqKAp3oAJcmzgZhUD2RcptBeUBScxKHgJKU4HPNcKVf3",
      "callHash": "(hash)",
      "multisig": "12fqSn9qVLJL4NY7Uua7bexEAVr9oCpD3e5xmdpNjtQszzBt",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`PeoplePolkadot Multisig > success tests > final approval with \`approveAsMulti\` does not lead to execution > events when Bob makes final approval with approveAsMulti 1`] = `
[
  {
    "data": {
      "approving": "14E5nqKAp3oAJcmzgZhUD2RcptBeUBScxKHgJKU4HPNcKVf3",
      "callHash": "(hash)",
      "multisig": "13yhdvhAzML3u5MENoG8WCT9bTVT5H3C6pjdMpy4PZNisgbS",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigApproval",
    "section": "multisig",
  },
]
`;

exports[`PeoplePolkadot Multisig > success tests > multisig cancellation works > events when Alice cancels multisig 1`] = `
[
  {
    "data": {
      "callHash": "(hash)",
      "cancelling": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
      "multisig": "12fqSn9qVLJL4NY7Uua7bexEAVr9oCpD3e5xmdpNjtQszzBt",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigCancelled",
    "section": "multisig",
  },
]
`;

exports[`PeoplePolkadot Multisig > success tests > multisig cancellation works > events when Alice creates multisig for cancellation 1`] = `
[
  {
    "data": {
      "approving": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
      "callHash": "(hash)",
      "multisig": "12fqSn9qVLJL4NY7Uua7bexEAVr9oCpD3e5xmdpNjtQszzBt",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`PeoplePolkadot Multisig > success tests > second approval (with \`approveAsMulti\`) in 2-of-3 multisig is successful and does not lead to execution > events when Alice creates multisig for approveAsMulti test 1`] = `
[
  {
    "data": {
      "approving": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
      "callHash": "(hash)",
      "multisig": "12fqSn9qVLJL4NY7Uua7bexEAVr9oCpD3e5xmdpNjtQszzBt",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`PeoplePolkadot Multisig > success tests > second approval (with \`approveAsMulti\`) in 2-of-3 multisig is successful and does not lead to execution > events when Bob approves with approveAsMulti 1`] = `
[
  {
    "data": {
      "approving": "14E5nqKAp3oAJcmzgZhUD2RcptBeUBScxKHgJKU4HPNcKVf3",
      "callHash": "(hash)",
      "multisig": "12fqSn9qVLJL4NY7Uua7bexEAVr9oCpD3e5xmdpNjtQszzBt",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigApproval",
    "section": "multisig",
  },
]
`;

exports[`PeoplePolkadot Multisig > success tests > second approval (with \`approveAsMulti\`) in 2-of-3 multisig is successful and does not lead to execution > events when Charlie provides final approval 1`] = `
[
  {
    "data": {
      "approving": "14Gjs1TD93gnwEBfDMHoCgsuf1s2TVKUP6Z1qKmAZnZ8cW5q",
      "callHash": "(hash)",
      "multisig": "12fqSn9qVLJL4NY7Uua7bexEAVr9oCpD3e5xmdpNjtQszzBt",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;
